@@ -57,45 +57,50 @@ MAIN GOAL for 0.6.0:
 		[ ]  Other devices: serial, RTC, framebuffer, ...
 		[ ]  Updated documentation.
 
+  [/]	RAM component:
+	[X]  unit tests for the write protect bit
+	[ ]  save/load state!
+	[X]  method for dumping contents ("dump") in hex and ascii (7-bit only to be safe).
+	[ ]  methods for searching for values (strings, words, etc?)
+
   [/]	The MVME187 machine, with a Motorola 88100 cpu, is a reasonable
 	first thing to implement, without breaking other architectures.
 
-	[ ]  Separate 88100 from 88110!
-
-	[ ]  Separate 88200 CMMUs? So that the two are really two
-	     separate devices.
-
 	[X]  Loading OpenBSD/mvme88k bsd and bsd.rd executables!
 	     I.e. implement an a.out file loader.
-
+	[ ]  Separate 88100 from 88110! I.e. separate CPU "architecture" from "model".
+	     Architecture = motorola 88000, but model is e.g. 88100.
+	[ ]  Separate 88200 CMMUs? So that the two are really two
+	     separate devices.
 	[ ]  Implement 88K instruction disassembly.
-
 	[ ]  Implement 88K instruction execution.
-
 	[ ]  Implement 88K virtual to physical memory translation.
 
    [ ]  Main execution loop should probably be looked over, so
 	that it is general enough to support lots of variants of
 	execution.
 
-	[ ]  Think about Verboseness.
-	
+	[ ]  Think about Verboseness. Is this per-component? How many levels?
+		E.g. a CPU can show state change in many ways:
+		o)  the instruction being executed
+		o)  the registers/state being changed
+		o)  function call trace (enter/leave function)
+		
 	[ ]  Think about error reporting / exceptions.
 
-	A "step" should be the core concept. A step on a single-cpu
-	machine is one instruction for that cpu. For a multi-
-	cpu machine, or where multiple devices run at different
-	speeds, a step may run things from more than one component.
+	A "step" should be the core concept. A step on a single-cpu machine is
+	one instruction for that cpu. For a multi-cpu machine, or where multiple
+	devices run at different speeds, a step should STILL only run one thing
+	from one component, and the different components' execution will be
+	interleaved. This way, there is always a specific order to what happens.
 
-	In other words, I plan for GXemul 0.6.x to support Cycle
-	Accurate component implementations. But obviously, this
-	does not mean automatically that all shipped/implemented
-	components will be Cycle Accurate. There will still be no
-	superscalar CPU models, or pipelines CPU models,
-	as shipped by me. Each instruction will execute in
-	one cycle, by default. (Simple CPUs like AVR could
-	perhaps be implemented as fully cycle accurate models,
-	for fun.)
+	In other words, I plan for GXemul 0.6.x to support Cycle Accurate
+	component implementations. But obviously, this does not automatically
+	mean that all shipped/implemented components will be Cycle Accurate.
+	There will still be no superscalar CPU models, or pipelines CPU models,
+	as shipped by me. Each instruction will execute in one cycle, by
+	default. (Simple CPUs like AVR could perhaps be implemented as fully
+	cycle accurate models, for fun, but that's an exception to the rule.)
 
 	Stepping should probably print the shortest possible part of the
 	component name, followed by the component's single-step printout.
@@ -144,10 +149,6 @@ MAIN GOAL for 0.6.0:
 
 	This would be especially good on CISC machines, where instructions have
 	multiple side-effects (flags etc), or when an exception occurs.
-
-	In a GUI (or curses-based UI), a disassembly view should probably be
-	available, where the current pc is highlighted (for CPU components).
-	Registers/state changing between steps could be printed/displayed in bold.
 
    [ ]  Unit tests for main loop/execution.
 
@@ -199,8 +200,8 @@ MAIN GOAL for 0.6.0:
 	[ ]  Simulation across multiple hosts?
 
    [ ]  File loaders:
-	[ ]  How about "reset"? The list of files must be
-	     stored somewhere.
+	[ ]  How about "reset"? The list of files could be stored somewhere.
+	     For now, reset does _NOT_ reload binaries.
 	[ ]  symbol handling, line number info, data types?
 	[ ]  argument handling! (arg count, at least)
 	[ ]  all the others (macho, ecoff, srec, raw, ...)
@@ -217,6 +218,10 @@ MAIN GOAL for 0.6.0:
 
 	[ ]  For all breakpoints, it should be possible to break
 	     both _before_ and _after_ a change has occurred!
+
+	[ ]  For all breakpoints/watchpoints, a Count should be kept, and the
+	     emulation should only break once the Count has reached a limit.
+	     (Usually 1, but should be possible to set to any positive value.)
 
 	[ ]  General for all components:
 	     Checked on device cycle execution, if necessary.
@@ -261,7 +266,7 @@ MAIN GOAL for 0.6.0:
 			cpu.pc+4	should print the _expression_ pc+4
 			cpu.pc=expr	assignment
 
-	[ ]  Help on Method arguments? E.g. cpu.unassemble [addr]
+	[ ]  Help on methods and method arguments? E.g. cpu.unassemble [addr]
 
 	[ ]  help for the "root" command.
 
@@ -316,12 +321,6 @@ MAIN GOAL for 0.6.0:
 
 	[ ]  Unit tests for the above!
 
-  [/]	RAM component:
-
-	[ ]  save/load state!
-
-	[ ]  methods for searching for values (strings, words, etc?)
-
    [ ]  Cache components.
 
 	[ ]  Implement the addressable data bus interface, but if data is contained
@@ -333,6 +332,7 @@ MAIN GOAL for 0.6.0:
 	[ ]  Unit tests.
 
    [ ]	Floating point helper.
+
 	Make this more complete/accurate than the old one, i.e. support
 	inf/nan, exceptions, signaling stuff, denormalized/normalized?
 
@@ -340,11 +340,13 @@ MAIN GOAL for 0.6.0:
 
    [ ]	Userland emulation
 
-   	[ ]  Begin with e.g. FreeBSD/amd64, or FreeBSD/alpha, or Linux/something.
+   	[ ]  Begin with e.g. FreeBSD/amd64, or FreeBSD/alpha, NetBSD/something,
+   	     or Linux/something.
 
    [ ]  Dyntrans: Portable (C++) _AND_ native code generation?
 
-	[ ] Basically the same as dyntrans in GXemul pre-0.6.0!
+	[ ] Basically the same as dyntrans ideas as in GXemul pre-0.6.0 should
+	    work! However, try to avoid the "macro magic".
 
 	[ ] Native code generation? (Not at first...)
 
@@ -354,34 +356,34 @@ MAIN GOAL for 0.6.0:
 		[ ] Ability to show disassembly of generated host
 		    instruction sequence!
 
-	[ ] Try to make the generated code as linear and branch
-	    free as possible. Experiment with making e.g. all
-	    "exceptional" branches go away to some place outside
-	    the basic block? If it is worth it.
+		[ ] Try to make the generated code as linear and branch
+		    free as possible. Experiment with making e.g. all
+		    "exceptional" branches go away to some place outside
+		    the basic block? If it is worth it.
+
+		[ ] Exceptions from device access, or from load/store to
+		    unmapped pages/devices/handlers should break the
+		    native code execution.
 
 	[ ] Instruction cache emulation:  For each emulated
 	    instruction, call a stub handler with the current pc.
 	    It is responsible for updating statistics etc.
-	    Should not be enabled by default.
+	    Should not be enabled by default (i.e. if there is no instruction cache).
 
 	[ ] Generic bus load/store access:
 		[ ] Pointers to host memory pages, for fast loads and stores:
 			[ ]  host_load and host_store (as before)
 			[ ]  host_load_user and host_store_user (as before,
 			     for those archs that need it, e.g. ARM and M88K?)
-			[ ]  Pointers to handler functions, for:
-				[ ]  device access
-				[ ]  data cache emulation
-				[ ]  breakpoints
-				[ ]  Investigate: http://vm-kernel.org/blog/2009/07/10/qemu-internal-part-2-softmmu/
-				     indicates that QEMU uses similar lookup mechanisms as GXemul, but
-				     uses an additional bit in the looked up page address to indicate
-				     I/O space. Investigate whether this is faster than having a pure
-				     pointer, and a separate lookup when the pointer is NULL!
-
-	[ ] Exceptions from device access, or from load/store to
-	    unmapped pages/devices/handlers should break the
-	    native code execution.
+		[ ]  Pointers to handler functions, for:
+			[ ]  device access
+			[ ]  data cache emulation
+			[ ]  breakpoints
+			[ ]  Investigate: http://vm-kernel.org/blog/2009/07/10/qemu-internal-part-2-softmmu/
+			     indicates that QEMU uses similar lookup mechanisms as GXemul, but
+			     uses an additional bit in the looked up page address to indicate
+			     I/O space. Investigate whether this is faster than having a pure
+			     pointer, and a separate lookup when the pointer is NULL!
 
 	[ ] Conditional breakpoints before AND after device accesses!
 
@@ -394,6 +396,22 @@ MAIN GOAL for 0.6.0:
 	    try both with and without native code generation, and with and without
 	    other instruction combinations.
 
+   [ ]	Output handlers:
+
+	[ ]  The output handlers should be connected to the specific devices
+	     that need to output!
+
+	[ ]  stdout/stdin, with CTRL-B sending CTRL-C to the emulated program,
+	     just as before. Only one device at a time can connect to this
+	     output handler.
+	     
+	[ ]  redirect to other file/tty/whatever
+	
+	[ ]  xterm/whatever (similar to before)
+	
+	[ ]  X-windows, or even SDL, for graphical output? Investigate. Would
+	     be cool if hardware OpenGL works, for emulation of accelerated
+	     graphics.
 
 -------------------------------------------------------------------------------
 
